--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.datasource.url=mysql://b5f3cd3fbc30c4:c12ece8e@us-cdbr-iron-east-03.cleardb.net/heroku_b7580eaf6983b7d?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:8081/tecseg?Timezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=simples
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
