--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>br.com.tecseg</groupId>
 	<artifactId>tecseg-api</artifactId>
 	<version>0.0.1</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<name>tecseg-api</name>
 	<description>Projeto Tecnico Seguraca</description>
 
@@ -56,11 +56,7 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>aws-java-sdk-s3</artifactId>
-			<version>1.11.516</version>
-		</dependency>
+		
 
 	</dependencies>
 
