--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,12 @@
 			<artifactId>ehcache</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
-		
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.11.519</version>
+		</dependency>
+
 
 	</dependencies>
 
