--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -23,3 +23,8 @@
 /nbdist/
 /.nb-gradle/
 /build/
+src/main/resources/aws.properties
+src/main/resources/aws.properties
+src/main/java/br/com/tecsegapi/util/teste.java
+src/main/resources/application.properties
+*.properties
