--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.datasource.url=mysql://b5f3cd3fbc30c4:c12ece8e@us-cdbr-iron-east-03.cleardb.net/heroku_b7580eaf6983b7d?reconnect=true
+spring.datasource.url=jdbc:mysql://tmmysql.cxjytqucztmb.us-east-1.rds.amazonaws.com:3306/tecseg
+spring.datasource.username=master
+spring.datasource.password=Travel2018#
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
