--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://tmmysql.cxjytqucztmb.us-east-1.rds.amazonaws.com:3306/tecseg
-spring.datasource.username=master
-spring.datasource.password=Travel2018#
+#spring.datasource.url=jdbc:mysql://tmmysql.cxjytqucztmb.us-east-1.rds.amazonaws.com:3306/tecseg?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=master
+#spring.datasource.password=Travel2018#
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/tecseg?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=simples
+
+
