--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,24 @@
 #spring.datasource.url=jdbc:mysql://tmmysql.cxjytqucztmb.us-east-1.rds.amazonaws.com:3306/tecseg?useTimezone=true&serverTimezone=UTC
 #spring.datasource.username=master
 #spring.datasource.password=Travel2018#
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
 spring.datasource.url=jdbc:mysql://localhost:3306/tecseg?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=simples
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=20
+spring.datasource.tomcat.min-idle=15
+
+
+
+spring.cache.cache-names=ticketsCache
+spring.cache.type=ehcache
+spring.cache.ehcache.config=classpath:ehcache.xml
