--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/tecseg?useTimezone=true&server
 spring.datasource.username=root
 spring.datasource.password=simples
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.show-sql=true
@@ -19,6 +19,3 @@ spring.datasource.tomcat.min-idle=15
 
 
 
-spring.cache.cache-names=ticketsCache
-spring.cache.type=ehcache
-spring.cache.ehcache.config=classpath:ehcache.xml
