--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:mysql://tmmysql.cxjytqucztmb.us-east-1.rds.amazonaws.com:3306/tecseg?useTimezone=true&serverTimezone=UTC
-#spring.datasource.username=master
-#spring.datasource.password=Travel2018#
-
-spring.datasource.url=jdbc:mysql://localhost:3306/tecseg?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mydb.cz7ktaednoej.us-east-2.rds.amazonaws.com:3306/tecseg?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=simples
+spring.datasource.password=20SimpleS78
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/tecseg?useTimezone=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=simples
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
