--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.11.519</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+<dependency>
+    <groupId>net.sf.jasperreports</groupId>
+    <artifactId>jasperreports</artifactId>
+    <version>6.8.0</version>
+</dependency>
+		
 
 
 	</dependencies>
